Clear the name edit of the workspace after saving

There is no such thing as a current workspace, so clear the workspace
name after saving the current layout to a named workspace.

BUG:446652
(cherry picked from commit 4e32d7141f0754bd696fedc0153450ad05602b1c)